# 2535-QtApplication-Reboot-mechanism

./: CMakeLists.txt  RestartWithQProcessDetached.cpp  RestartWithWhileLoop.cpp  ctkAbstractRestartManager.cpp  ctkAbstractRestartManager.h  ctkErrorLogFDMessageHandler.cpp  ctkErrorLogFDMessageHandler.h  ctkErrorLogFDMessageHandler_p.h  ctkErrorLogModel.cpp  ctkErrorLogModel.h  ctkRestartWidget.cpp  ctkRestartWidget.h  ctkUtils.h
